k8s/media/tdarr/resources/resources.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  annotations:
    reloader.stakater.com/auto: 'true'
  labels: &labels
    app.kubernetes.io/component: web
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      securityContext:
        fsGroup: 1000
      volumes:
        - name: volume
          persistentVolumeClaim:
            claimName: volume
        - name: truenas-media
          persistentVolumeClaim:
            claimName: truenas-media
        - name: logs
          emptyDir: {}
      containers:
        - name: tdarr
          image: ghcr.io/haveagitgat/tdarr:2.29.01
          resources:
            requests:
              memory: 100M
            limits:
              memory: 4G
          securityContext:
            privileged: false
          volumeMounts:
            - name: volume
              mountPath: /app/configs
            - name: logs
              mountPath: /app/logs
            - name: truenas-media
              mountPath: /media
          ports:
            - name: http
              containerPort: 8265

---
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  selector:
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 80
      targetPort: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: internal-ingress
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    gethomepage.dev/href: https://tdarr.durbin.casa
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/app: tdarr
    gethomepage.dev/group: Media
    gethomepage.dev/icon: tdarr
    gethomepage.dev/name: Tdarr
spec:
  ingressClassName: internal
  rules:
    - host: &host tdarr.durbin.casa
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: web-service
                port:
                  name: http
  tls:
    - secretName: durbin-casa-wildcard-cert
      hosts:
        - *host
